# TraceLens

./: .env.example  README.md  pyproject.toml  requirements.txt
infra/iam/: tracelens-policy.json
src/: lambda_handler.py
src/analysis/: confidence.py  root_cause_engine.py
src/api/: routes.py
src/config/: settings.py
src/ingestion/: insights_query.py  log_fetcher.py
src/rag/: failure_patterns.json  schema.py  vector_store.py
src/tracelens/analysis/: __init__.py  explanation.py
src/tracelens/api/: main.py  routes.py  schemas.py
src/tracelens/config/: aws.py
src/tracelens/correlation/: normalizer.py  timeline_builder.py  trace_filter.py
src/tracelens/ingestion/: cloudwatch_client.py  demo_fetcher.py  demo_scenarios.py
src/tracelens/rag/: embeddings.py  failure_patterns.json  knowledge_base.py  vector_store.py
